# Computational_Geometry

./: CMakeLists.txt
include/: circle.h  corridor.h  fitting.h  hyperplain.h  point.h  segment.h
src/: main.cpp
